Font-size is fixed for text on the pads on mobile and tablet views

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -386,13 +386,14 @@ header {
         #kit-container .wrapper #right-defaults .pad {
           width: 120px;
           height: 120px;
-          font-size: 1em; } }
+          font-size: .9em; } }
       @media screen and (min-width: 900px) {
         #kit-container .wrapper #right-defaults .pad {
           width: 150px;
           height: 150px;
           margin: 20px;
-          margin-left: 45px; } }
+          margin-left: 45px;
+          font-size: 1.1em; } }
     @media screen and (min-width: 376px) {
       #kit-container .wrapper #right-defaults {
         padding-top: 55px; } }
