--- a/styles/partials/_kit.scss
+++ b/styles/partials/_kit.scss
@@ -73,7 +73,7 @@
                 @media screen and (min-width: $size-medium) {
                     width:120px;
                     height: 120px;
-                    font-size: 1em;
+                    font-size: .9em;
                 }
 
                 @media screen and (min-width: $size-x-large) {
@@ -81,6 +81,7 @@
                     height: 150px;
                     margin: 20px;
                     margin-left: 45px;
+                    font-size: 1.1em;
                 }
                 
             }
